corrected population size

--- a/rtcc_footage_request_rates.ipynb
+++ b/rtcc_footage_request_rates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "    df.loc[:, \"offender_gender\"] = (\n",
     "        df.offender_gender.str.lower().str.strip().fillna(\"\").str.replace(\"unknown\", \"\", regex=False)\n",
     "    )\n",
-    "    df = df[(df.offender_gender.isin([\"male\"]))]\n",
+    "    df = df[df.offender_gender.isin([\"male\"])]\n",
     "    return df[~((df.offender_gender == \"\"))]\n",
     "\n",
     "\n",
@@ -136,19 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_data():\n",
     "  df = clean()\n",
-    "  df = df.pipe(filter_year).pipe(drop_rows_missing_race)\n",
+    "  df = df.pipe(filter_year).pipe(drop_rows_missing_race).pipe(filter_gender)\n",
     "  return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,31 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[[\"offender_race\", \"rtcc_footage_request_tally\"]]\n",
-    "df = df.groupby([\"offender_race\"]).rtcc_footage_request_tally.count()\n",
+    "df = df[[\"offender_race\", \"rtcc_footage_request_tally\", \"offender_gender\"]]\n",
+    "df = df.groupby([\"offender_race\", \"offender_gender\"]).rtcc_footage_request_tally.count()\n",
     "df = pd.DataFrame(df).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[(df.offender_race == \"black\"), \"population\"] = \"229000\"\n",
-    "df.loc[(df.offender_race == \"white\"), \"population\"] = \"120000\"\n",
-    "df.loc[(df.offender_race == \"hispanic\"), \"population\"] = \"21500\"\n",
-    "df.loc[(df.offender_race == \"amer. ind.\"), \"population\"] = \"723\"\n",
-    "df.loc[(df.offender_race == \"asian\"), \"population\"] = \"11305\""
+    "df.loc[(df.offender_race == \"black\"), \"population\"] = \"105498\"\n",
+    "df.loc[(df.offender_race == \"white\"), \"population\"] = \"65756\"\n",
+    "df.loc[(df.offender_race == \"hispanic\"), \"population\"] = \"11205\"\n",
+    "df.loc[(df.offender_race == \"amer. ind.\"), \"population\"] = \"360\"\n",
+    "df.loc[(df.offender_race == \"asian\"), \"population\"] = \"5499\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -245,6 +245,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>offender_race</th>\n",
+       "      <th>offender_gender</th>\n",
        "      <th>rtcc_footage_request_tally</th>\n",
        "      <th>population</th>\n",
        "      <th>rate_per_1000_persons</th>\n",
@@ -254,58 +255,70 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>amer. ind.</td>\n",
+       "      <td>male</td>\n",
        "      <td>3</td>\n",
-       "      <td>723</td>\n",
-       "      <td>4.149378</td>\n",
+       "      <td>360</td>\n",
+       "      <td>8.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>asian</td>\n",
+       "      <td>male</td>\n",
        "      <td>15</td>\n",
-       "      <td>11305</td>\n",
-       "      <td>1.326847</td>\n",
+       "      <td>5499</td>\n",
+       "      <td>2.727769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>black</td>\n",
-       "      <td>10826</td>\n",
-       "      <td>229000</td>\n",
-       "      <td>47.275109</td>\n",
+       "      <td>male</td>\n",
+       "      <td>9550</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>90.523043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>hispanic</td>\n",
-       "      <td>130</td>\n",
-       "      <td>21500</td>\n",
-       "      <td>6.046512</td>\n",
+       "      <td>male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>11205</td>\n",
+       "      <td>9.638554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>white</td>\n",
-       "      <td>966</td>\n",
-       "      <td>120000</td>\n",
-       "      <td>8.050000</td>\n",
+       "      <td>male</td>\n",
+       "      <td>781</td>\n",
+       "      <td>65756</td>\n",
+       "      <td>11.877243</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  offender_race  rtcc_footage_request_tally population  rate_per_1000_persons\n",
-       "0    amer. ind.                           3        723               4.149378\n",
-       "1         asian                          15      11305               1.326847\n",
-       "2         black                       10826     229000              47.275109\n",
-       "3      hispanic                         130      21500               6.046512\n",
-       "4         white                         966     120000               8.050000"
+       "  offender_race offender_gender  rtcc_footage_request_tally population  \\\n",
+       "0    amer. ind.            male                           3        360   \n",
+       "1         asian            male                          15       5499   \n",
+       "2         black            male                        9550     105498   \n",
+       "3      hispanic            male                         108      11205   \n",
+       "4         white            male                         781      65756   \n",
+       "\n",
+       "   rate_per_1000_persons  \n",
+       "0               8.333333  \n",
+       "1               2.727769  \n",
+       "2              90.523043  \n",
+       "3               9.638554  \n",
+       "4              11.877243  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.sort_values(\"offender_race\")"
    ]
   }
  ],
