updated rtcc notebook; deleted csvs w incorrect pop size

--- a/rtcc_footage_request_rates.ipynb
+++ b/rtcc_footage_request_rates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "\n",
     "\n",
     "def filter_year(df):\n",
-    "    df = df[df.year.astype(str).isin([\"2018\", \"2019\", \"2020\", \"2021\", \"2022\"])]\n",
+    "    df = df[df.year.astype(str).isin([\"2022\"])]\n",
     "    # the following figures are percentages of the \"offender_race\" value\n",
     "    ### 2018 - 2022\n",
     "    \"\"\"\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,13 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3398: DtypeWarning: Columns (21) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexing.py:1676: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(ilocs[0], value, pi)\n"
      ]
     }
    ],
@@ -166,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,16 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"rate_per_1000_persons\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.population), axis=1)"
+    "df[\"rate_per_1000_persons\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.population), axis=1)\n",
+    "df[\"year\"] = \"2022\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -249,48 +256,36 @@
        "      <th>rtcc_footage_request_tally</th>\n",
        "      <th>population</th>\n",
        "      <th>rate_per_1000_persons</th>\n",
+       "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>amer. ind.</td>\n",
+       "      <td>asian</td>\n",
        "      <td>male</td>\n",
-       "      <td>3</td>\n",
-       "      <td>360</td>\n",
-       "      <td>8.333333</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5499</td>\n",
+       "      <td>0.727405</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>asian</td>\n",
+       "      <td>black</td>\n",
        "      <td>male</td>\n",
-       "      <td>15</td>\n",
-       "      <td>5499</td>\n",
-       "      <td>2.727769</td>\n",
+       "      <td>757</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>7.175491</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>black</td>\n",
-       "      <td>male</td>\n",
-       "      <td>9550</td>\n",
-       "      <td>105498</td>\n",
-       "      <td>90.523043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>hispanic</td>\n",
-       "      <td>male</td>\n",
-       "      <td>108</td>\n",
-       "      <td>11205</td>\n",
-       "      <td>9.638554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>white</td>\n",
        "      <td>male</td>\n",
-       "      <td>781</td>\n",
+       "      <td>50</td>\n",
        "      <td>65756</td>\n",
-       "      <td>11.877243</td>\n",
+       "      <td>0.760387</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -298,21 +293,17 @@
       ],
       "text/plain": [
        "  offender_race offender_gender  rtcc_footage_request_tally population  \\\n",
-       "0    amer. ind.            male                           3        360   \n",
-       "1         asian            male                          15       5499   \n",
-       "2         black            male                        9550     105498   \n",
-       "3      hispanic            male                         108      11205   \n",
-       "4         white            male                         781      65756   \n",
+       "0         asian            male                           4       5499   \n",
+       "1         black            male                         757     105498   \n",
+       "2         white            male                          50      65756   \n",
        "\n",
-       "   rate_per_1000_persons  \n",
-       "0               8.333333  \n",
-       "1               2.727769  \n",
-       "2              90.523043  \n",
-       "3               9.638554  \n",
-       "4              11.877243  "
+       "   rate_per_1000_persons  year  \n",
+       "0               0.727405  2022  \n",
+       "1               7.175491  2022  \n",
+       "2               0.760387  2022  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
