added spreadsheets for all years calculation

--- a/rtcc_footage_request_rates.ipynb
+++ b/rtcc_footage_request_rates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "\n",
     "\n",
     "def filter_year(df):\n",
-    "    df = df[df.year.astype(str).isin([\"2022\"])]\n",
+    "    df = df[df.year.astype(str).isin([\"2020\", \"2021\", \"2022\"])]\n",
     "    # the following figures are percentages of the \"offender_race\" value\n",
     "    ### 2018 - 2022\n",
     "    \"\"\"\n",
@@ -136,19 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_data():\n",
     "  df = clean()\n",
-    "  df = df.pipe(filter_year).pipe(drop_rows_missing_race).pipe(filter_gender)\n",
+    "  df = df.pipe(filter_year).pipe(drop_rows_missing_race).pipe(filter_gender).pipe(filter_arrested)\n",
     "  return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"rate_per_1000_persons\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.population), axis=1)\n",
-    "df[\"year\"] = \"2022\""
+    "df[\"year\"] = \"2020-2022\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -262,30 +262,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>asian</td>\n",
+       "      <td>amer. ind.</td>\n",
        "      <td>male</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5499</td>\n",
-       "      <td>0.727405</td>\n",
-       "      <td>2022</td>\n",
+       "      <td>3</td>\n",
+       "      <td>360</td>\n",
+       "      <td>8.333333</td>\n",
+       "      <td>2020-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>black</td>\n",
+       "      <td>asian</td>\n",
        "      <td>male</td>\n",
-       "      <td>757</td>\n",
-       "      <td>105498</td>\n",
-       "      <td>7.175491</td>\n",
-       "      <td>2022</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5499</td>\n",
+       "      <td>1.454810</td>\n",
+       "      <td>2020-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>black</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2223</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>21.071490</td>\n",
+       "      <td>2020-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>male</td>\n",
+       "      <td>29</td>\n",
+       "      <td>11205</td>\n",
+       "      <td>2.588130</td>\n",
+       "      <td>2020-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>white</td>\n",
        "      <td>male</td>\n",
-       "      <td>50</td>\n",
+       "      <td>172</td>\n",
        "      <td>65756</td>\n",
-       "      <td>0.760387</td>\n",
-       "      <td>2022</td>\n",
+       "      <td>2.615731</td>\n",
+       "      <td>2020-2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -293,17 +311,21 @@
       ],
       "text/plain": [
        "  offender_race offender_gender  rtcc_footage_request_tally population  \\\n",
-       "0         asian            male                           4       5499   \n",
-       "1         black            male                         757     105498   \n",
-       "2         white            male                          50      65756   \n",
+       "0    amer. ind.            male                           3        360   \n",
+       "1         asian            male                           8       5499   \n",
+       "2         black            male                        2223     105498   \n",
+       "3      hispanic            male                          29      11205   \n",
+       "4         white            male                         172      65756   \n",
        "\n",
-       "   rate_per_1000_persons  year  \n",
-       "0               0.727405  2022  \n",
-       "1               7.175491  2022  \n",
-       "2               0.760387  2022  "
+       "   rate_per_1000_persons       year  \n",
+       "0               8.333333  2020-2022  \n",
+       "1               1.454810  2020-2022  \n",
+       "2              21.071490  2020-2022  \n",
+       "3               2.588130  2020-2022  \n",
+       "4               2.615731  2020-2022  "
       ]
      },
-     "execution_count": 189,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
