--- a/notebooks/rtcc_footage_request_rates.ipynb
+++ b/notebooks/rtcc_footage_request_rates.ipynb
@@ -2,50 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
     "### to-do ###\n",
-    "# compare rates with electronic police report data where rtcc footage is not requested "
+    "# compare rates with electronic police report data where rtcc footage is not requested \n",
+    "# explore # of arrested (x amount of black males were arrested. how many were/are innocent? given the dubious effectiveness of tech)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "def clean():\n",
-    "    df1 = pd.read_csv(\"electronic_police_report_2018.csv\")\n",
-    "    df2 = pd.read_csv(\"electronic_police_report_2019.csv\")\n",
-    "    df3 = pd.read_csv(\"electronic_police_report_2020.csv\")\n",
-    "    df4 = pd.read_csv(\"electronic_police_report_2021.csv\")\n",
-    "    df5 = pd.read_csv(\"electronic_police_report_2022.csv\")\n",
+    "    df1 = pd.read_csv(\"../data/electronic_police_report_2018.csv\")\n",
+    "    df2 = pd.read_csv(\"../data/electronic_police_report_2019.csv\")\n",
+    "    df3 = pd.read_csv(\"../data/electronic_police_report_2020.csv\")\n",
+    "    df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n",
+    "    df5 = pd.read_csv(\"../data/electronic_police_report_2022.csv\")\n",
     "\n",
     "    dfs = [df1, df2, df3, df4, df5]\n",
     "    dfa = pd.concat(dfs, join=\"outer\")\n",
     "    \n",
-    "    dfb = pd.read_csv(\"rtcc.csv\", encoding=\"cp1252\").rename(columns={\"Item_number\": \"item_number\"})\n",
+    "    dfb = pd.read_csv(\"../data/rtcc.csv\", encoding=\"cp1252\").rename(columns={\"Item_number\": \"item_number\"})\n",
     "\n",
     "    df = pd.merge(dfa, dfb, on=\"item_number\")\n",
-    "    return df"
+    "    return df.drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = clean"
+    "df = clean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,31 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3398: DtypeWarning: Columns (21) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexing.py:1676: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_column(ilocs[0], value, pi)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = filter_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -273,18 +259,18 @@
        "      <th>1</th>\n",
        "      <td>asian</td>\n",
        "      <td>male</td>\n",
-       "      <td>8</td>\n",
+       "      <td>6</td>\n",
        "      <td>5499</td>\n",
-       "      <td>1.454810</td>\n",
+       "      <td>1.091107</td>\n",
        "      <td>2020-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>black</td>\n",
        "      <td>male</td>\n",
-       "      <td>2223</td>\n",
+       "      <td>1841</td>\n",
        "      <td>105498</td>\n",
-       "      <td>21.071490</td>\n",
+       "      <td>17.450568</td>\n",
        "      <td>2020-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -300,9 +286,9 @@
        "      <th>4</th>\n",
        "      <td>white</td>\n",
        "      <td>male</td>\n",
-       "      <td>172</td>\n",
+       "      <td>164</td>\n",
        "      <td>65756</td>\n",
-       "      <td>2.615731</td>\n",
+       "      <td>2.494069</td>\n",
        "      <td>2020-2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -312,20 +298,20 @@
       "text/plain": [
        "  offender_race offender_gender  rtcc_footage_request_tally population  \\\n",
        "0    amer. ind.            male                           3        360   \n",
-       "1         asian            male                           8       5499   \n",
-       "2         black            male                        2223     105498   \n",
+       "1         asian            male                           6       5499   \n",
+       "2         black            male                        1841     105498   \n",
        "3      hispanic            male                          29      11205   \n",
-       "4         white            male                         172      65756   \n",
+       "4         white            male                         164      65756   \n",
        "\n",
        "   rate_per_1000_persons       year  \n",
        "0               8.333333  2020-2022  \n",
-       "1               1.454810  2020-2022  \n",
-       "2              21.071490  2020-2022  \n",
+       "1               1.091107  2020-2022  \n",
+       "2              17.450568  2020-2022  \n",
        "3               2.588130  2020-2022  \n",
-       "4               2.615731  2020-2022  "
+       "4               2.494069  2020-2022  "
       ]
      },
-     "execution_count": 214,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
