added analysis for dispositions

--- a/notebooks/rtcc_footage_request_rates.ipynb
+++ b/notebooks/rtcc_footage_request_rates.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "### to-do ###\n",
-    "# compare rates with electronic police report data where rtcc footage is not requested \n",
     "# explore # of arrested (x amount of black males were arrested. how many were/are innocent? given the dubious effectiveness of tech)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +24,7 @@
     "    df3 = pd.read_csv(\"../data/electronic_police_report_2020.csv\")\n",
     "    df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n",
     "    df5 = pd.read_csv(\"../data/electronic_police_report_2022.csv\")\n",
+    "    df5[\"year\"] = 2022\n",
     "\n",
     "    dfs = [df1, df2, df3, df4, df5]\n",
     "    dfa = pd.concat(dfs, join=\"outer\")\n",
@@ -32,21 +32,12 @@
     "    dfb = pd.read_csv(\"../data/rtcc.csv\", encoding=\"cp1252\").rename(columns={\"Item_number\": \"item_number\"})\n",
     "\n",
     "    df = pd.merge(dfa, dfb, on=\"item_number\")\n",
-    "    return df.drop_duplicates()"
+    "    return df.drop_duplicates(subset=[\"item_number\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = clean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +66,8 @@
     "\n",
     "\n",
     "def filter_year(df):\n",
-    "    df = df[df.year.astype(str).isin([\"2020\", \"2021\", \"2022\"])]\n",
+    "    df.loc[:, \"year\"] = df.year.astype(str).str.replace(r\"\\.$\", \"\", regex=True)\n",
+    "    df = df[df.year.astype(str).isin([\"2018\", \"2019\", \"2020\", \"2021\", \"2022\"])]\n",
     "    # the following figures are percentages of the \"offender_race\" value\n",
     "    ### 2018 - 2022\n",
     "    \"\"\"\n",
@@ -125,40 +117,42 @@
     "      hispanic    0.018075\n",
     "      asian       0.001595\n",
     "    \"\"\"\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def extract_years(df):\n",
-    "    years = df.occurred_date_time.astype(str).str.extract(r\"(\\w{4})\")\n",
-    "\n",
-    "    df.loc[:, \"year\"] = years[0]\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_data():\n",
     "  df = clean()\n",
-    "  df = df.pipe(filter_year).pipe(drop_rows_missing_race).pipe(filter_gender).pipe(filter_arrested)\n",
+    "  df = df.pipe(filter_gender).pipe(filter_year).pipe(drop_rows_missing_race)\n",
     "  return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3398: DtypeWarning: Columns (21) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "df = filter_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +161,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['black', 'white', 'hispanic', 'asian', 'amer. ind.'], dtype=object)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.offender_race.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"rate_per_1000_persons\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.population), axis=1)\n",
-    "df[\"year\"] = \"2020-2022\""
+    "df[\"year\"] = \"2018-2022\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -250,46 +264,46 @@
        "      <th>0</th>\n",
        "      <td>amer. ind.</td>\n",
        "      <td>male</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>360</td>\n",
-       "      <td>8.333333</td>\n",
-       "      <td>2020-2022</td>\n",
+       "      <td>2.777778</td>\n",
+       "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>asian</td>\n",
        "      <td>male</td>\n",
-       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>5499</td>\n",
-       "      <td>1.091107</td>\n",
-       "      <td>2020-2022</td>\n",
+       "      <td>1.272959</td>\n",
+       "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>black</td>\n",
        "      <td>male</td>\n",
-       "      <td>1841</td>\n",
+       "      <td>2828</td>\n",
        "      <td>105498</td>\n",
-       "      <td>17.450568</td>\n",
-       "      <td>2020-2022</td>\n",
+       "      <td>26.806195</td>\n",
+       "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>hispanic</td>\n",
        "      <td>male</td>\n",
-       "      <td>29</td>\n",
+       "      <td>40</td>\n",
        "      <td>11205</td>\n",
-       "      <td>2.588130</td>\n",
-       "      <td>2020-2022</td>\n",
+       "      <td>3.569835</td>\n",
+       "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>white</td>\n",
        "      <td>male</td>\n",
-       "      <td>164</td>\n",
+       "      <td>278</td>\n",
        "      <td>65756</td>\n",
-       "      <td>2.494069</td>\n",
-       "      <td>2020-2022</td>\n",
+       "      <td>4.227751</td>\n",
+       "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -297,21 +311,21 @@
       ],
       "text/plain": [
        "  offender_race offender_gender  rtcc_footage_request_tally population  \\\n",
-       "0    amer. ind.            male                           3        360   \n",
-       "1         asian            male                           6       5499   \n",
-       "2         black            male                        1841     105498   \n",
-       "3      hispanic            male                          29      11205   \n",
-       "4         white            male                         164      65756   \n",
+       "0    amer. ind.            male                           1        360   \n",
+       "1         asian            male                           7       5499   \n",
+       "2         black            male                        2828     105498   \n",
+       "3      hispanic            male                          40      11205   \n",
+       "4         white            male                         278      65756   \n",
        "\n",
        "   rate_per_1000_persons       year  \n",
-       "0               8.333333  2020-2022  \n",
-       "1               1.091107  2020-2022  \n",
-       "2              17.450568  2020-2022  \n",
-       "3               2.588130  2020-2022  \n",
-       "4               2.494069  2020-2022  "
+       "0               2.777778  2018-2022  \n",
+       "1               1.272959  2018-2022  \n",
+       "2              26.806195  2018-2022  \n",
+       "3               3.569835  2018-2022  \n",
+       "4               4.227751  2018-2022  "
       ]
      },
-     "execution_count": 217,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
